# pulse-beacon

./: .gitignore  CHANGELOG.md  CLA.md  COMMERCIAL.md  MANIFEST.in  NOTICE  README.md  RELEASING.md  SECURITY.md  _build_backend.py  build-runtime-jar.sh  check-versions.sh  dist-smoke-test.sh  py_environment.yml  pyproject.toml  release-build.sh
.github/workflows/: ci.yml
core/java/: .gitignore  pom.xml  run-jep-example.sh
core/java/src/main/java/com/inventzia/beacon/core/: AbstractEngine.java  AbstractGateway.java  Actor.java  EngineCommand.java  Event.java  Gateway.java  GatewayStatus.java  MultiClientEngine.java  OperatingMode.java  Pub.java  ReportLevel.java  Reporter.java  Sub.java  TimeEvent.java  TimeEventComparator.java  TimeMachine.java  Topic.java
core/java/src/main/java/com/inventzia/pulse/beacon/core/: AbstractActor.java  AbstractEngine.java  AbstractGateway.java  Actor.java  CausalityException.java  ComponentReporter.java  EngineCommand.java  Gateway.java  GatewayStatus.java  MultiClientEngine.java  OperatingMode.java  Pub.java  ReportLevel.java  Reporter.java  Slf4jReporter.java  Sub.java  TimeEvent.java  TimeEventComparator.java  TimeMachine.java  Topic.java
core/java/src/main/java/com/inventzia/pulse/beacon/core/crosslanguage/: CrossLanguageActor.java  CrossLanguageEvent.java  CrossLanguageException.java  CrossLanguageGateway.java  JEP_README.md  JepLauncher.java  README.md
core/java/src/main/java/com/inventzia/pulse/beacon/core/examples/: EchoConsumer.java  HistoricRunExample.java  HistoricRunJepExample.java  MarketDataReplayExample.java  PrintConsumer.java  PrintGateway.java  RealTimeHeartbeatExample.java  RealTimeRunJepExample.java  RunUtils.java
core/java/src/main/java/com/inventzia/pulse/beacon/core/gateway/file/: JsonlGatewayException.java  (+2 more)
core/java/src/main/resources/: logback.xml
core/java/src/main/resources/examples/data/: messages_two.jsonl
core/java/src/test/java/com/inventzia/pulse/beacon/core/: CausalityTest.java  DispatchFailureTest.java  DispatchOrderTest.java  GatewayFailureTest.java  GatewayMonotonicityTest.java  GatewayRegistrationTest.java  HistoricalRunTest.java  RealTimeStartupTest.java  TieBreakDeterminismTest.java
core/java/src/test/java/com/inventzia/pulse/beacon/core/crosslanguage/: CrossLanguageGatewaySinkTest.java
core/java/src/test/resources/: logback-test.xml
core/python/: py_environment.yml
core/python/inventzia/pulse/beacon/core/: actor.py  channel.py  dispatch.py  gateway.py  reporter.py
core/python/inventzia/pulse/beacon/core/crosslanguage/: cross_language_streamer.py  jep_host.py  jpype_host.py
core/python/inventzia/pulse/beacon/core/examples/: echo_consumer.py  historic_run_jpype.py  message_feed_gateway.py  print_consumer.py  realtime_run_jpype.py  recording_print_consumer.py
core/python/tests/: conftest.py  test_codec_cross_language_parity.py  test_historic_run_jep.py  test_historic_run_jpype.py
docs/: cross-language-python-inprocess.md
src/inventzia/pulse/beacon/: __init__.py
src/inventzia/pulse/beacon/_runtime/: __init__.py
src/inventzia/pulse/beacon/core/: __init__.py  actor.py  channel.py  dispatch.py  gateway.py  reporter.py
src/inventzia/pulse/beacon/core/crosslanguage/: README.md  __init__.py  cross_language_streamer.py  jep_host.py  jpype_host.py
src/inventzia/pulse/beacon/core/examples/: __init__.py  echo_consumer.py  historic_run_jpype.py  message_feed_gateway.py  print_consumer.py  realtime_run_jpype.py  recording_print_consumer.py  vector_value_run_jpype.py
src/inventzia/pulse/beacon/core/examples/_data/: cdf_bars.jsonl  messages_one.jsonl
tests/: conftest.py  test_codec_cross_language_parity.py  test_historic_run_jep.py  test_historic_run_jpype.py  test_vector_value_immutability.py  test_vector_value_run.py
(+1 files in other folders)
